k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-app
  labels:
    app: hugo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - ts.makertube.net
      secretName: ts-tls
  rules:
    - host: ts.makertube.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugo-app
                port: 
                  number: 30000
